[gd_scene load_steps=4 format=3 uid="uid://dh8vidhg8rbr6"]

[ext_resource type="Texture2D" uid="uid://bxlvdugwb5t71" path="res://icon.svg" id="1_pwn7u"]
[ext_resource type="Script" path="res://Skills/absorb_skill.gd" id="1_vp84c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oj8se"]
radius = 5.7033

[node name="absorb_skill" type="Node3D"]
script = ExtResource("1_vp84c")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0, 0.1, 0)
texture = ExtResource("1_pwn7u")

[node name="check_player" type="Area3D" parent="."]
collision_layer = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="check_player"]
shape = SubResource("SphereShape3D_oj8se")

[connection signal="body_entered" from="check_player" to="." method="_on_check_player_body_entered"]
[connection signal="body_exited" from="check_player" to="." method="_on_check_player_body_exited"]
[connection signal="mouse_entered" from="check_player" to="." method="_on_check_player_mouse_entered"]
[connection signal="mouse_exited" from="check_player" to="." method="_on_check_player_mouse_exited"]
